# runlocal_hub

./: .coverage  .gitignore  CHANGELOG.md  README.md  bench_example.py  example.py  predict.py  predict_example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runlocal.py  runlocal_client.py  view_model_benchmarks.py
inference_pipelines/clip_cosine_similarity/: README.md  clip_cosine_similarity_demo.py
inference_pipelines/d_fine/: README.md  d_fine_demo.py
inference_pipelines/depth_anything_v2/: README.md  depth_anything_v2_demo.py
inference_pipelines/kokoro/: README.md  kokoro_demo.py  requirements.txt
inference_pipelines/lama_inpainting/: README.md  lama_inpainting_demo.py
inference_pipelines/phi3_5v_instruct/: README.md  phi3_5v_instruct_demo.py  requirements.txt
runlocal/: __init__.py  client.py  exceptions.py
runlocal/devices/: __init__.py  filters.py  selector.py
runlocal/http/: client.py
runlocal/jobs/: __init__.py  poller.py
runlocal/models/: __init__.py  benchmark.py  benchmark_result.py  device.py  job.py  prediction.py  tensor.py
runlocal/tensors/: __init__.py  handler.py
runlocal/utils/: __init__.py  console.py  decorators.py  display.py  json.py
src/runlocal_hub/: __init__.py  client.py
src/runlocal_hub/jobs/: poller.py
src/runlocal_hub/models/: __init__.py  benchmark.py  model.py  (+1 more)
tests/: conftest.py  requirements.txt
tests/unit/: test_benchmark_models.py  test_client.py  test_device_filters.py  test_device_selector.py  test_exceptions.py  test_http_client.py  test_job_poller.py  test_tensor_handler.py
(+2 files in other folders)
