[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runlocal-hub"
version = "0.1.0"
description = "Python client library for the RunLocal API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RunLocal", email = "ciaran@runlocal.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic",
    "requests",
    "rich",
    "numpy",
    "tqdm",
]

[project.urls]
Homepage = "https://runlocal.ai"
Documentation = "https://github.com/neuralize-ai/runlocal-api"
Repository = "https://github.com/neuralize-ai/runlocal-api"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runlocal_hub*"]
exclude = ["tests*"]
